2008-08-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make `pgtable-manager' faster.

	* postgres-table.scm: From module (ice-9 common-list),
	select also `pick-mappings'.
	(fmt): Incorporate into `pgtable-manager'.
	(symbol->qstring, serial? col-defs, drop-proc, create-proc)
	(->db-insert-string, clean-defs, pre-insert-into, insert-values-proc)
	(insert-col-values-cmd, insert-col-values-proc, insert-alist-proc)
	(delete-rows-proc, update-col-proc, select-proc): Likewise.
	(pgtable-manager): Compute each column name's "qstring" only once.

2008-07-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	C optimization: Declare unboxing funcs inline.

	* libpq.c (xc_unbox, res_unbox, sepo_unbox): Declare `inline'.

2008-07-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Remove gc- and init-debugging macros.

	* libpq.c (GC_PRINT, INIT_PRINT): Delete macros
	and surrounding pre-processor conditionals.
	(xc_mark, xc_free): Remove `GC_PRINT' call.
	(res_mark, res_free, sepo_mark, sepo_free): Likewise.
	(init_module): Remove `INIT_PRINT' call.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Use "cell word 0" for lobport access.

	* libpq.c (LOBPORT_WITH_FLAGS_P): New macro.
	(OPLOBPORTP, OPINLOBPORTP): Use `LOBPORT_WITH_FLAGS_P'.
	(lob_mklobport): Use `SCM_SET_CELL_WORD_0'.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Make `res_box' handle NULL-check.

	* libpq.c (res_box): If given NULL, return Scheme false.
	(pg_exec, pg_exec_params, pg_exec_prepared, pg_send_query): Update.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Decruft: Inline single-use *_box funcs.

	* libpq.c (xc_box, sepo_box): Delete funcs.
	(pg_connectdb): Use `SCM_RETURN_NEWSMOB' directly.
	(pg_make_print_options): Likewise.

2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Increase abstraction: Use C macros for smob data access.

	* libpq.c (xc_unbox): Use `SCM_SMOB_DATA'.
	(res_unbox, sepo_unbox): Likewise.
	(xc_free): Use `SCM_SET_SMOB_DATA'.